@@ -2,8 +2,10 @@ Wysiwyg Fields 6.x-1.x-dev, xxxx-xx-xx (Development release)
 ----------------------------------
 
 - #1096948: Fixed issue when Wysiwyg Field is in a Fieldgroup.
-- #1090746: Added support for Fullscreen mode.
 - #1092586: Fixed issue when JavaScript Cache is turned on.
+- #1092586: Fixed issue with Wysiwyg plugin not loading content type settings.
+- #1090746: Added support for Fullscreen mode.
+- #1086134: Fixed CSS Class namespace issues.
 - #1085948: Fixed issue with View Source plugin.
 - Added Field bypass hook.
 - Added Wyswiwyg plugins hook.
